--- a/stackoverflow.tex
+++ b/stackoverflow.tex
@@ -36,7 +36,7 @@
 	
 	% If your name is very short, use just one of the lines below
 	% If your name is very long, reduce the font size or make the minipage wider and reduce the others proportionately
-	{\HUGE\textcolor{stackoverflow-name}{\textbf{Alessandra Bilardi}}} % First name
+	{\HUGE\textcolor{stackoverflow-name}{\textbf{Graziano Statello}}} % First name
 	{\HUGE\textcolor{stackoverflow-name}{\textbf{}}} % Last name
 
 \end{minipage}
@@ -44,11 +44,9 @@
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
 	\begin{flushright}
 		{\small
-			{Venice, Italy}\\
-			{+1 123 456 789}\\
-			{\href{mailto:alessandra.bilardi@gmail.com}{alessandra.bilardi@gmail.com}}\\	
-			{\href{https://alessandra.bilardi.net}{alessandra.bilardi.net}}\\
-			{\href{https://github.com/bilardi}{github.com/bilardi}}\\
+			{London, United Kingdom}\\
+			{\href{mailto:grazianos86@gmail.com}{grazianos86@gmail.com}}\\
+			{\href{https://github.com/Akallabet}{github.com/Akallabet}}\\
 		}
 	\end{flushright}
 \end{minipage}
@@ -61,13 +59,6 @@
 \begin{minipage}[t]{0.8\textwidth} % 40% of the page width for the introduction text
 	\vspace{\baselineskip} % Required for vertically aligning minipages
 	\vspace{\baselineskip} % Required for vertically aligning minipages
-	{\normalsize\emph{I'm a Data \& Automation Specialist at Corley, an AWS Advanced Partner. And when I can, I'm a mentor for a local Coderdojo.
-	I wrote my first code in GWbasic on T1000 with MS-DOS 2.11, when I was eight years old. And I dissected an animal a lot of time before..
-	I have a Bsc in biological science, physiopathological area and a PhD in biotechnology, bioinformatics area.
-	I love the technical approach and learn new languages and storage services. I'm curious, sensible and precise.
-	I play without breaks when I can develop or automate applications by extreme programming, testops, devops and applying the standards.
-	Studying, playing, learning and sharing are my legs. Where I'll go, it depends only from the next challenge you will throw me.
-	}}\\\\
 \end{minipage}
 \begin{minipage}[t]{0.1\textwidth}\vspace{\baselineskip}\end{minipage}
 
@@ -82,11 +73,13 @@
 \end{minipage}
 \begin{minipage}[t]{0.75\textwidth}
 	\vspace{\baselineskip} % Required for vertically aligning minipages
+	{\normalsize\emph{I'm an experienced software engineer with a particular interest in web technologies.
+	I have built and delivered performant and robust applications, using a variety of Agile methodologies.
+	My main programming language is Javascript for both Front End and Back End, but I'm also interested in functional programming and started to use Clojure in the past year.
+	}}\\\\
 	{\small
 		\miniblock{0.1}{0.9}{Likes:}
-			{awk, sed, regex, data-mining, machine-learning, testops, devops, dataops, extreme-programming, tdd, continuous-integration, continuous-delivery, continuous-deployment, amazon-web-services, serverless-architecture\\}
-		\miniblock{0.1}{0.9}{Dislikes:}
-			{asp.net, c\#, .net, sql-server, waterfall}
+			{Javascript Nodejs Reactjs GraphQL Clojure AWS continuous-delivery Functional Programming\\}
 	}
 \end{minipage}
 
@@ -108,135 +101,55 @@
 {\vspace{-16.3pt} % Whitespace before the section title
 	\small\begin{entrylist}
 	\entry
-		{Apr 2022 → Current}
-		{Data \& Automation Specialist}
-		{Corley}
-		{{awk, sed, docker, amazon-web-services, continuous-integration, continuous-deployment, version-control, amazon-cloudformation, aws-iot, amazon-kinesis, aws-lambda, amazon-sagemaker, serverless-architecture, databases, machine-learning}\\\\
-		Company description. Corley is an AWS Advanced Partner. It supports from small to large companies to manage cloud-based applications,
-		to exploit scalable and performing infrastructures and to create digital products.\\\\
-		My job detail. Technical support and promoter of guidelines: data management, monitoring and automation of processes with TDD, CI and CD by DataOps, DevOps and MLOps methods.
-		Cloud engineer: testing, tuning and learning of new solutions for ML and dataflow processes by AWS services with also data versioning and IaC deployment by SAM and Cloudformation.
-		Solution Architect: design, risk assessment and technical consultant for HA and DR.}
+		{Aug 2021 → Current}
+		{Senior Web Developer}
+		{Signal AI}
+		{{Nodejs, Graphql, Reactjs, Clojure, micro-frontends, Terraform, aws, docker, continuous-deployment, elastic-search}\\\\
+		Developing pipelines across the full stack (FrontEnd, BackEnd, Database and Infrastructure) to optimise the delivery of advanced insights created from the consumption of millions of documents a day using Machine Learning and NLP.
+		}
 	\entry
-		{Mar 2022 → Mar 2022}
-		{Career Break}
-		{Professional Development}
-		{{amazon-web-services, aws-iot, amazon-sagemaker, databases}\\\\
-		AWS Training and not only.\\
-		I studied for AWS DB Specialty Certification and AWS Solution Architect Certification.\\
-		I played with home automation control and IoT services.}
+		{Jan 2020 → Aug 2021}
+		{Front End Technology Principal}
+		{AND Digital}
+		{{reactjs, gatsby, react-testing-library, cypress, amazon-web-services, github-actions, azure-devops, contentful, material-ui}\\\\
+		Driving AND Digital technology offer by influencing the early adoption of key technologies such as headless CMS, GatsbyJs, NextJs and Graphql, which have been proven key in attracting and retaining customers. Successfully delivered key applications, resulting in newly developed business relationships. Training and mentoring junior and mid level developers.}
 	\entry
-		{Mar 2016 → Feb 2022}
-		{Data \& Automation Specialist}
-		{Pixartprinting - a Cimpress Company}
-		{{awk, sed, vagrant, docker, amazon-web-services, continuous-integration, continuous-deployment, version-control, amazon-cloudformation, aws-fargate, aws-lambda, amazon-sagemaker, serverless-architecture, databases}\\\\
-		My job detail. Technical consultant and promoter of guidelines: principally for design, data management and automation of processes with TDD, CI and CD.
-		DBA: implementation of automated processes for creating and managing of local and online job environments for DynamoDB, MySQL, MongoDB, Redis, Redshift and Snowflake with Docker and Jupyter; monitoring of services online with CloudWatch, Percona Monitoring and Management, Zabbix and custom scripts / lambda.
-		Cloud engineer: testing, tuning and learning of new solutions for BI ETL, ML and dataflow processes by AWS services with also data versioning and IaC deployment by CDK, Sceptre, Serverless Framework and Cloudformation.
-		Consultant: design, risk assessment and technical support for maintenance of services online, improvements of schemas and queries, new solutions with HA and DR.}
+		{Oct 2018 → Jan 2020}
+		{Lead Front End Developer}
+		{AND Digital}
+		{{reactjs, react-testing-library, gatsby, node.js, github-actions}\\\\
+		Leading multiple teams of developers for different web focussed projects, training and mentoring junior and mid level developers.}
 	\entry
-		{Oct 2013 → Feb 2016}
-		{IT Technical and Development Lead}
-		{Pixartprinting}
-		{{awk, sed, lamp, oop, rest, continuous-integration, continuous-deployment, version-control}\\\\
-		My job detail. Technical consultant and promoter of new services or systems: principally versioning and storing. Programmer:
-		VCS with svn / git and composer, debugging, implementation and maintenance of Chrome extensions, MVC design with OOP
-		on CMS and webservice applications projects with Redis on LAMP system; using SOAP, websocket and RESTful protocols.
-		Manager: DevTeam lead of the maintenance of a satellite portal customized for a client with CodeIgniter and of the migration of
-		the current system to a SOA environment.}
+		{Oct 2017 → Oct 2018}
+		{Product Developer}
+		{AND Digital}
+		{{frontend, ecmascript-6, javascript, reactjs}\\\\
+		Tech Lead strongly Front End focussed, being responsible for the delivery of end to end projects}
 	\entry
-		{Jan 2013 → Sep 2013}
-		{IT Developer}
-		{Pixartprinting}
-		{{awk, sed, lamp, oop, model-view-controller, continuous-integration, continuous-deployment, version-control}\\\\
-		Company description. Pixartprinting is one of the big European web-to-print companies for professional customers. It works
-		and produces in Italy. On top it invests in research, development and performance for any process from e-commerce site to
-		the production and customer care.\\\\
-		My job detail. Management of technical tasks. Development and maintenance of extensions/plugins, libraries, modules,
-		templates, .., to enhance and optimize communications, marketing, networks, services and third party.}
+		{Mar 2016 → Aug 2017}
+		{Senior Front End Developer}
+		{ICAP}
+		{{d3.js, reactjs, ecmascript-6, webpack, karma-runner, chai}\\\\
+		I was part of multiple teams that built a real time trading platform used by brokers to arbitrate buying and selling of various financial products.
+My team was responsible for the web platform which we built using microFrontends in React and Redux, we used D3 to create custom charts. We used CI/CD with multiple daily releases and whilst monitoring performance, quality and security.}
 	\entry
-		{May 2011 → Dec 2012}
-		{IT Development Manager}
-		{Fidelity House - a Horizon Group Company}
-		{{awk, sed, lamp, oop, data-mining, performance, social-networking}\\\\
-		Company description. Fidelity House was a cash back and fidelity social network of Horizon GROUP since May 2012. It
-		collaborates with principal affiliation marketing platforms like Leadium, TradeDoubler and Zanox. On top it manages and
-		moderates contents of social network users and it "fidelities" any users actions too.\\\\
-		My job detail. Coordination and development of interface, net and load, optimize of data structures and resources, data mining and tracking.
-		Using OpenX, PiwiX, Joomla open sources for tracking and frontend, with Redis on LAMP system and Horizon ADV hosting.}
+		{Mar 2014 → Mar 2016}
+		{Javascript Developer}
+		{VML London}
+		{{angularjs, css, javascript, git, gruntjs, gulp, protractor, karma-runner, jasmine}\\\\
+		I was involved in the modernisation and revamping of http://www.premierinn.com using Adobe Experience Manager and AngularJs, improving SEO visibility, first time loading speed and allowing multi language customisation for german market.
+		We ran Continuous Integration with multiple daily releases, canary releases and traffic monitoring.}
 	\entry
-		{May 2010 → Dec 2012}
-		{IT Development Manager}
-		{Leadhouse - a Horizon Group Company}
-		{{awk, sed, lamp, oop, data-mining, performance, affiliate}\\\\
-		Company description. Leadhouse is an affiliation marketing platform of Horizon GROUP since May 2012. It hosts and
-		deliveries digital contents at principal or niche portals. On top it manages mail marketing. All for enhance web visibility and
-		marketing of its clients. Principal clients were Bata, Nolita, Met and Museum.\\\\
-		My job detail. Coordination and development of interface, net and load, optimize of data structures and resources, data
-		mining, ad serving supervision and its monitoring. Using SOAP and RESTful protocol for tracking on CodeIgniter framework,
-		LAMP system and Horizon ADV hosting.}
-	\entry
-		{Feb 2010 → Dec 2012}
-		{IT Development Manager}
-		{Horizon ADV - a Horizon Group Company}
-		{{awk, sed, lamp, oop, model-view-controller, continuous-integration, continuous-deployment, version-control}\\\\
-		Company description. Horizon ADV is a digital agency of Horizon GROUP since May 2012. It develops, hosts and manages
-		institutional, ecommerce and mini sites. On top it edits social media and mail marketing contents. All for enhance web
-		visibility and marketing of its clients. Principal clients were Bata, Nolita, Mediaset, Met and Museum.\\\\
-		My job detail. Development and management of extensions/plugins, libraries, modules, templates, .., to enhance and optimize
-		communications, marketing, networks and services. Sysadmin: backuping/restoring; firewall with shorewall; hosting with
-		nginx, apache, postfix/qmail, and proftp; monitoring with script, collectd, monit and nagios; memory caching with php apc and
-		memcached; networking; sharing with samba and sparkleshare; storing with mysql, postgresql and redis; syncing with rsync
-		and unison. Programmer: VCS with git, debugging, OOP and MVC design on CMS and RTMP; using CodeIgniter, Joomla, JQuery,
-		Magento, Pear, PHPMotion, Red5, Wordpress open sources on LAMP system; using APIs about social networks (Facebook, Google, Twitter, Yahoo),
-		mail marketing services (ContactLab, eCircle), marketing affiliation platforms (Leadium, TradeDoubler, Zanox) and carrier services (Bartolini, DHL, TNT, UPS).
-		Manager: coordination and development of interface, net, load and web contents, optimize of data structures and resources, data mining and tracking.}
-	\entry
-		{Jan 2004 → Jan 2010}
-		{Bioinformatics programmer}
-		{CRIBI Genomics group, University of Padova}
-		{{awk, sed, lamp, data-mining, match, perl, c, python, java, cluster-analysis, factor-analysis}\\\\
-		Use and management of Bioperl and Biopython packages and MediaWiki extension using MediaWiki, Plone and Typo3 open sources. GBrowse and sites administrator.\\
-		Development of software for analyzing (cluster and factor analysis) the secondary structure of microRNAs and RDTs.\\
-		Development of GBrowse.org, an open source portal as gene annotation files repository and genomic informations database.
-		Collaboration on GMOD project with GBrowse.org subproject.\\
-		Collaboration on identify intragenic repeat component and how codon usage is affecting termination of bacterial genes with C-A Roten (CRIB/IMUL/CHUV/UNIL).\\
-		from 2009/10 to 2009/12, Molecular Biology, didactics/exercise\\
-		from 2009/04 to 2009/06, Molecular Biology, didactics/exercise\\
-		from 2005/02 to 2005/06, Molecular Biology, didactics/exercise}
-	\entry
-		{Jan 1999 → Dec 2008}
-		{Trainer swim}
-		{Public Swimming Pools}
-		{{coding-style}\\\\
-		Aquatic activity with baby. Technical education about four styles from beginner to old timer.\\
-		from 2008/09 to 2008/12, RIVIERA NUOTO, Dolo (VENICE)\\
-		from 2005/01 to 2005/12, RIVIERA NUOTO, Dolo (VENICE)\\
-		from 1999/01 to 2002/03, GP NUOTO, Mira (VENICE)\\
-		Trainer swim with first and second patent.}
-	\entry
-		{Oct 2002 → Dec 2003}
-		{Biologist}
-		{Dep. of Biology, University of Padova}
-		{{python, latex}\\\\
-		Cellular, Tissue and Molecular Biology. Clinical trial - medical operation about mouse and rat heart.}
-	\entry
-		{Aug 2002 → Sep 2002}
-		{Biologist}
-		{Dep. of Biology, University of Padova}
-		{{python, latex}\\\\
-		Use of an ionizing radiation source to label zebrafish eggs in several stadium.}
-	\entry
-		{Mar 2001 → Jul 2002}
-		{Student}
-		{Dep. of Biology, University of Padova}
-		{{python, latex}\\\\
-		Molecular biology, Micromanipolation about DNA and RNA injection in zebrafish eggs.}
-\end{entrylist}}
+		{Feb 2012 → Apr 2014}
+		{Front end Engineer}
+		{Offerte Tour Operator}
+		{{javascript, php, slim, angularjs, css}\\\\
+		Worked as a web developer for a small and dynamic startup that has distrupted the travel \& tourism industry in Italy. I've been responsible for the creation and maintenance of a highly flexible whitelable used in a variety of travel agencies websites.}
+	\end{entrylist}}
 \end{tcolorbox}
 
 %----------------------------------------------------------------------------------------
-%	EDUCATION
+%	APPS & Software
 %----------------------------------------------------------------------------------------
 
 \textcolor{stackoverflow}{\hrule}
@@ -249,70 +162,40 @@
 		at ([xshift=-0.25\textwidth]frame.north west)
 {
 	\vspace{\baselineskip} % Whitespace before the section title
-	\cvsect{Certifications}
+	\cvsect{Apps \& Software}
 };}]
 {\vspace{-16.3pt} % Whitespace before the section title
 	\small\begin{entrylist}
 	\entry
-		{Expires Mar 2025}
-		{AWS Certified Database}
-		{Specialty}
-		{\href{https://www.credly.com/badges/f258f1bc-59d3-4a22-9f45-506afce9a440}{https://www.credly.com/badges/f258f1bc-59d3-4a22-9f45-506afce9a440}}
+		{Mar 2021}
+		{Order and Pay at Table app - Zizzi and ASK Italian}
+		{\href{https://pronto.askitalian.co.uk}{https://pronto.askitalian.co.uk}}
+		{{node.js, gatsby, material-ui, websocket, cypress, react-testing-library, koa, microservices}\\\\
+		Lead a fully remote team in building an ambitious mobile-first website for ordering and paying at table for Zizzi and Ask Italian. The result was a sound success and we had the highest adoption rate of any other similar product in the UK. We used GatsbyJs on a bespoke microservices AWS architecture and real time communication with the use of web-sockets.}
+	\entry
+		{Jul 2020}
+		{Premier Inn Business}
+		{\href{https://www.premierinn.com}{https://www.premierinn.com}}
+		{{reactjs, cypress, aem}\\\\
+		Lead multiple teams to deliver the business facing website of Premierinn. This was a complex project where we had to migrate existing functionalities from AEM to a modern REST/React stack, we achieved that to use cypress and cucumber to provide a solid layer of E2E tests on the existing website, while extending it with the business side.}
+	\entry
+		{May 2020}
+		{Restoration \& Renewal Programme}
+		{\href{https://restorationandrenewal.uk}{https://restorationandrenewal.uk}}
+		{{reactjs, cypress, aem}\\\\
+		I lead a team on a fast paced 3 months project for the Westminster Restoration \& Renewal programme. We've built a website with Gatsbyjs, based on a bespoke Azure architecture, using Contentful as headless CMS. The result was a high performance, fully accessible and SEO optimised website. The project was considered a success and allowed AND to be considered a major technology partner for the public sector.}
+	\entry
+		{Sep 2019}
+		{AVON Recruitment Platform}
+		{}
+		{{reactjs, material-ui, jest, azure-devops, react-testing-library}\\\\
+		Lead team that built a market agnostic AVON Sales Leaders recruitment websites (and App) with admin, in collaboration 3rd parties from different parts of the world}
+	\entry
+		{Oct 2018}
+		{Lloyds}
+		{}
+		{{reactjs, react-native}\\\\
+		Add new features for the Lloyds App (IOs and Android)}
 	\end{entrylist}}
 \end{tcolorbox}
-
-\textcolor{stackoverflow}{\hrule}
-\vspace{4pt} % Whitespace before the section title
-\begin{tcolorbox}[blanker,width=0.75\textwidth,enlarge left by=0.25\textwidth,before skip=6pt,breakable,
-	overlay unbroken and first={%
-	  \node[inner sep=0pt,outer sep=0pt,text width=0.35\textwidth,
-		align=none,
-		below right]
-		at ([xshift=-0.25\textwidth]frame.north west)
-{
-	\vspace{\baselineskip} % Whitespace before the section title
-	\cvsect{Education}
-};}]
-{\vspace{-16.3pt} % Whitespace before the section title
-	\small\begin{entrylist}
-	\entry
-		{2004 → 2008}
-		{Ph.D. in Biotechnology}
-		{Università degli Studi di Padova}
-		{{awk, sed, lamp, data-mining	• match	• perl, c, python	• java, cluster-analysis, factor-analysis}\\\\
-		Bioinformatics area. Thesis title: \emph{RNA regulators and their target sequences}.\\
-		Bioinformatics programmer, CRIBI Genomics and GBrowser databases and sites administrator, GMOD, Trainer swim, FIN.}
-	\entry
-		{1997 → 2002}
-		{Bsc in Biology}
-		{Università degli Studi di Padova}
-		{{ms-dos, gw-basic, mirc, python, latex}\\\\
-		Physiopathological area. Thesis title: \emph{Glucagon promoter subcloning in Danio rerio}.\\
-		Informatic operator in the university general secretary and math department library, Trainer swim, FIN.}
-	\entry
-		{1992 → 1997}
-		{High School diploma}
-		{Istituto Luigi Stefanini}
-		{{ms-dos, gw-basic, mirc, python}\\\\
-		Piano player, swimmer and student.}
-	\end{entrylist}}
-\end{tcolorbox}
-
-%----------------------------------------------------------------------------------------
-%	TOOLS
-%----------------------------------------------------------------------------------------
-
-\textcolor{stackoverflow}{\hrule}
-\begin{minipage}[t]{0.25\textwidth}
-	\vspace{\baselineskip} % Required for vertically aligning minipages
-	\cvsect{Tools}
-\end{minipage}
-\begin{minipage}[t]{0.75\textwidth}
-	\vspace{\baselineskip} % Required for vertically aligning minipages
-	{\small
-		\miniblock{0.2}{0.8}{First Computer:}{Toshiba T1000\\}
-		\miniblock{0.2}{0.8}{Favorite Editor:}{emacs}
-	}
-\end{minipage}
-
 \end{document}
