--- a/stackoverflow.tex
+++ b/stackoverflow.tex
@@ -101,7 +101,13 @@
 {\vspace{-16.3pt} % Whitespace before the section title
 	\small\begin{entrylist}
 	\entry
-		{Aug 2021 → Current}
+		{Mar 2023 → Now}
+		{Senior Software Developer}
+		{Nearform - Project: Mckinsey/Wave}
+		{{Nodejs,  Reactjs, Playwright, AWS, Docker, Jenkins, elastic-search}\\\\
+		Maintaining and improving a complex and multifaceted web based Saas platform }
+	\entry
+		{Aug 2021 → Mar 2023}
 		{Senior Web Developer}
 		{Signal AI}
 		{{Nodejs, Graphql, Reactjs, Clojure, micro-frontends, Terraform, aws, docker, continuous-deployment, elastic-search}\\\\
